[project]
name = "finance"
version = "0.1.0"
description = "Put into practice finance courses taken at emlyon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "numba>=0.62.0",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "seaborn>=0.13.2",
    "xlsxwriter>=3.2.9",
    "yfinance>=0.2.66",
]
